@@ -7,6 +7,7 @@ Version 1.1.1.dev0
   * realy disabled accels for vim
   * toggle buttons to on/off editor and preview
   * tabs setting in status bar
+  * preferences are save automatical
 
 Version 1.1.0 - 03.08.2017 7:00
 
